# gl-whatevs

./: CMakeLists.txt  Camera.cpp  Camera.hpp  FrameBufferShader.cpp  FrameBufferShader.hpp  FramebufferBinder.cpp  FramebufferBinder.hpp  GLHandler.cpp  GLHandler.hpp  GameLoop.cpp  GameLoop.hpp  GameModel.cpp  GameModel.hpp  GameObject.cpp  GameObject.hpp  GameObjectPositionUpdateSubscriber.hpp  GamePhysicsObject.cpp  GamePhysicsObject.hpp  GamePhysicsState.cpp  GamePhysicsState.hpp  GameState.cpp  GameState.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  GraphicsPipelineItem.hpp  Makefile  Model.cpp  Model.hpp  ModelInstance.cpp  ModelInstance.hpp  ModelInstancePositionUpdater.hpp  README.md  Shader.cpp  Shader.hpp  ShadowMapper.hpp  game_loop.cpp  game_loop.hpp  main.cpp
shaders/: color_shader.frag  default.frag  default.vert  default_post.frag  default_post.vert  edge_detect.frag  shader.frag  shader.vert  squiggly.vert
